# go-paddle-ocr

./: .gitignore  README.md
doc/: mysys2-ucrt64-init.md
paddle/: CMakeLists.txt
paddle/ap/: CMakeLists.txt
paddle/cinn/: CMakeLists.txt
paddle/cinn/adt/: dim_expr_match_trait.h  equation_solver.cc  get_sub_reshape_dim_ranges.cc  schedule_dim.cc
paddle/cinn/ast_gen_ius/: ast_gen.cc
paddle/cinn/backends/: CMakeLists.txt  codegen_c.cc  codegen_cuda_dev.cc  codegen_cuda_dev.h  codegen_cuda_host.h  codegen_device_util.cc  codegen_device_util.h  codegen_gpu_dev.cc  codegen_gpu_dev.h  compiler.cc  compiler.h
paddle/cinn/common/: CMakeLists.txt  broadcast_tree.cc  dim_expr_converter.cc  integer_set.cc  integer_set.h  ir_util.cc  ir_util.h  iter_simplify.cc  shape_constraint.cc  shape_constraint.h  simplify_special_pattern.cc  simplify_special_pattern.h  target.cc  target.h
paddle/cinn/ir/: CMakeLists.txt  buffer.cc  ir.cc  ir.h  ir_base.cc  ir_base.h  ir_mutator.h  ir_printer.h  (+6 more)
paddle/common/: CMakeLists.txt  flags.cc  flags_native.cc
paddle/fluid/distributed/collective/: CMakeLists.txt  async_load.cc  process_group_bkcl.cc  process_group_bkcl.h  process_group_custom.cc  process_group_custom.h  process_group_flagcx.cc  process_group_flagcx.h  process_group_kernel_utils.cc  process_group_nccl.cc  process_group_nccl.h  process_group_with_stream.h  xpu_async_load.cc
paddle/fluid/distributed/collective/deep_ep/: CMakeLists.txt  config.hpp  deep_ep.cpp  deep_ep.hpp  event.hpp
paddle/fluid/distributed/collective/deep_ep/include/: CUDADataType.h  CUDAStream.h  ScalarType.h  event.h  event_pool.h  types.h
paddle/fluid/distributed/collective/deep_ep/kernels/: api.cuh  buffer.cuh  configs.cuh  exception.cuh  ibgda_device.cuh  internode.cu  internode_ll.cu  intranode.cu  launch.cuh  runtime.cu  utils.cuh
paddle/fluid/distributed/collective/deep_ep/src/: CUDAStream.cc  event.cc  event_pool.cc
paddle/phi/: CMakeLists.txt  README.md
paddle/scripts/: compile_requirements.txt  fast_install.sh  paddle_build.sh
(+1403 files in other folders)
